--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,13 @@
          http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
+  <parent>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>3.1.3</version>
+    <relativePath/>
+  </parent>
+
   <groupId>oppweeder</groupId>
   <artifactId>oppweeder</artifactId>
   <version>1.0-SNAPSHOT</version>
@@ -12,29 +19,33 @@
   <description>Side project for Instagram oppweeder</description>
 
   <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>19</maven.compiler.source>
-    <maven.compiler.target>19</maven.compiler.target>
-    <selenium.version>4.10.0</selenium.version>
-    <webdrivermanager.version>5.3.1</webdrivermanager.version>
+    <java.version>19</java.version>
   </properties>
 
   <dependencies>
-    <!-- Selenium Java bindings -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter</artifactId>
+    </dependency>
+
     <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
       <artifactId>selenium-java</artifactId>
-      <version>${selenium.version}</version>
+      <version>4.31.0</version>
     </dependency>
 
-    <!-- WebDriverManager for managing driver binaries -->
+    <dependency>
+        <groupId>org.seleniumhq.selenium</groupId>
+        <artifactId>selenium-chrome-driver</artifactId>
+        <version>4.31.0</version>
+    </dependency>
+
     <dependency>
       <groupId>io.github.bonigarcia</groupId>
       <artifactId>webdrivermanager</artifactId>
-      <version>${webdrivermanager.version}</version>
+      <version>5.3.1</version>
     </dependency>
 
-    <!-- (Optional) Gson for JSON processing if needed -->
     <dependency>
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
@@ -44,15 +55,9 @@
 
   <build>
     <plugins>
-      <!-- Maven Compiler Plugin -->
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.1</version>
-        <configuration>
-          <source>${maven.compiler.source}</source>
-          <target>${maven.compiler.target}</target>
-        </configuration>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
       </plugin>
     </plugins>
   </build>
