--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
   </properties>
 
   <dependencies>
+  
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter</artifactId>
@@ -51,6 +52,14 @@
       <artifactId>gson</artifactId>
       <version>2.9.0</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.26</version>
+      <scope>provided</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
