Adding launch.json to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /target/
 target/maven-status/maven-compiler-plugin/compile/default-compile/createdFiles.lst
 target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
+.vscode/launch.json
