--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
   </properties>
 
   <dependencies>
-  
+
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter</artifactId>
@@ -60,6 +60,19 @@
       <scope>provided</scope>
     </dependency>
 
+  
+    <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-all</artifactId>
+      <version>4.1.39.Final</version>
+    </dependency>
+
+  
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot</artifactId>
+      <version>2.1.7.RELEASE</version>
+    </dependency>
   </dependencies>
 
   <build>
